Add colour to test output in CI

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,8 @@ jobs:
         ocaml-compiler:
           - 4.13.x
     runs-on: ${{ matrix.os }}
+    env:
+      OUNIT_CI: true
     steps:
       - name: Check out code
         uses: actions/checkout@v2
