--- a/math_practice.opam
+++ b/math_practice.opam
@@ -3,6 +3,7 @@ opam-version: "2.0"
 depends: [
   "dune" {>= "2.9"}
   "ounit2" {>= "2.2.4"}
+  "bisect_ppx" {>= "2.7.0"}
   "odoc" {with-doc}
 ]
 build: [
