--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,6 +28,6 @@ jobs:
       - name: Build
         run: opam exec -- dune build
       - name: Run tests
-        run: opam exec -- dune runtest --instrument-with bisect_ppx --force
+        run: dune runtest --instrument-with bisect_ppx --force
       - name: Display code coverage summary
         run: bisect-ppx-report summary
