--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,7 +16,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     env:
       OUNIT_CI: true
-      VERSION: "1.0.0"
+      VERSION: 1.0.0
     steps:
       - name: Set artifact name for MacOS
         if: matrix.os == 'macos-latest'
@@ -44,3 +44,21 @@ jobs:
         with:
           name: ${{ env.ARTIFACT_NAME }}
           path: _build/default/src/main.exe
+  source:
+    runs-on: ubuntu-latest
+    env:
+      VERSION: 1.0.0
+      ARTIFACT_NAME: math_practice${{env.VERSION}}-source
+    steps:
+      - name: Save source code
+        uses: actions/upload-artifact@v2
+        with:
+          name: ${{ env.ARTIFACT_NAME }}
+          path: |
+            lib
+            src
+            test
+            .gitignore
+            README.md
+            dune-project
+            math_practice.opam
