--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,8 +7,11 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        ocaml-compiler: 4.05.0
-    runs-on: windows-10
+        os:
+          - windows-10
+        ocaml-compiler:
+          - 4.05.0
+    runs-on: ${{matrix.os}}
     env:
       OUNIT_CI: true
       VERSION: 1.0.0
