--- a/math_practice.opam
+++ b/math_practice.opam
@@ -5,7 +5,7 @@ synopsis: "A command-line tool to generate math exercises"
 maintainer: ["Louis Hildebrand <louis.hildebrand@mail.mcgill.ca>"]
 authors: ["Louis Hildebrand <louis.hildebrand@mail.mcgill.ca>"]
 homepage: "https://github.com/louis-hildebrand/math_practice"
-dev-repo: "https://github.com/louis-hildebrand/math_practice"
+dev-repo: "git+https://github.com/louis-hildebrand/math_practice.git"
 bug-reports: "https://github.com/louis-hildebrand/math_practice/issues"
 depends: [
   "dune" {>= "2.9"}
